--- a/templates/base.html
+++ b/templates/base.html
@@ -501,23 +501,23 @@
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-bag-alt"></i>my account</a>
                         <ul class="dropdown-list">
-                            <li><a href="profile.html">profile</a></li>
-                            <li><a href="wallet.html">wallet</a></li>
-                            <li><a href="wishlist.html">wishlist</a></li>
-                            <li><a href="compare.html">compare</a></li>
-                            <li><a href="checkout.html">checkout</a></li>
-                            <li><a href="orderlist.html">order history</a></li>
-                            <li><a href="invoice.html">order invoice</a></li>
-                            <li><a href="email-template.html">email template</a></li>
+                            <li><a href="#">profile</a></li>
+                            <li><a href="#">wallet</a></li>
+                            <li><a href="#">wishlist</a></li>
+                            <li><a href="#">compare</a></li>
+                            <li><a href="#">checkout</a></li>
+                            <li><a href="#">order history</a></li>
+                            <li><a href="#">order invoice</a></li>
+                            <li><a href="#">email template</a></li>
                         </ul>
                     </li>
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-lock"></i>authentication</a>
                         <ul class="dropdown-list">
-                            <li><a href="login.html">login</a></li>
-                            <li><a href="register.html">register</a></li>
-                            <li><a href="reset-password.html">reset password</a></li>
-                            <li><a href="change-password.html">change password</a></li>
+                            <li><a href="#">login</a></li>
+                            <li><a href="#">register</a></li>
+                            <li><a href="#">reset password</a></li>
+                            <li><a href="#">change password</a></li>
                         </ul>
                     </li>
                     <li>
@@ -529,14 +529,14 @@
                             <li><a href="blog-author.html">blog author</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link" href="offer.html"><i class="icofont-sale-discount"></i>offers</a></li>
-                    <li><a class="nav-link" href="about.html"><i class="icofont-info-circle"></i>about us</a></li>
-                    <li><a class="nav-link" href="faq.html"><i class="icofont-support-faq"></i>need help</a></li>
-                    <li><a class="nav-link" href="contact.html"><i class="icofont-contacts"></i>contact us</a></li>
-                    <li><a class="nav-link" href="privacy.html"><i class="icofont-warning"></i>privacy policy</a></li>
-                    <li><a class="nav-link" href="coming-soon.html"><i class="icofont-options"></i>coming soon</a></li>
-                    <li><a class="nav-link" href="error.html"><i class="icofont-ui-block"></i>404 error</a></li>
-                    <li><a class="nav-link" href="login.html"><i class="icofont-logout"></i>logout</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-sale-discount"></i>offers</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-info-circle"></i>about us</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-support-faq"></i>need help</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-contacts"></i>contact us</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-warning"></i>privacy policy</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-options"></i>coming soon</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-ui-block"></i>404 error</a></li>
+                    <li><a class="nav-link" href="#"><i class="icofont-logout"></i>logout</a></li>
                 </ul>
                 <div class="nav-info-group">
                     <div class="nav-info">
@@ -568,7 +568,7 @@
                     MOBILE-MENU PART START
         =======================================-->
         <div class="mobile-menu">
-            <a href="index.html" title="Home Page">
+            <a href="#" title="Home Page">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -581,12 +581,12 @@
                 <span>cartlist</span>
                 <sup>9+</sup>
             </button>
-            <a href="wishlist.html" title="Wishlist">
+            <a href="#" title="Wishlist">
                 <i class="fas fa-heart"></i>
                 <span>wishlist</span>
                 <sup>0</sup>
             </a>
-            <a href="compare.html" title="Compare List">
+            <a href="#" title="Compare List">
                 <i class="fas fa-random"></i>
                 <span>compare</span>
                 <sup>0</sup>
