--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <meta name="profile" content="https://themeforest.net/user/mironcoder">
 
         <!-- TEMPLATE META -->
-        <meta name="name" content="Greeny">
+        <meta name="name" content="Yuvaa">
         <meta name="title" content="Yuvaa - Fashonna">
         <meta name="keywords" content="yuvaa, fuvaa fashonna, shop, ecommerce, store, html, bootstrap, template, agriculture, vegetables, webshop, farm, grocery, natural, online store">
         <!--=====================================
@@ -238,138 +238,16 @@
                 <button class="category-close"><i class="icofont-close"></i></button>
             </div>
             <ul class="category-list">
+                {% for brand in brands %}
                 <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
+                    <a class="category-link " href="{% url 'product:brand-detail' brand.slug %}">
                         <i class="flaticon-vegetable"></i>
-                        <span>vegetables</span>
+                        <span>{{ brand.name }}</span>
                     </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">asparagus</a></li>
-                        <li><a href="#">broccoli</a></li>
-                        <li><a href="#">carrot</a></li>
-                    </ul>
+                    
                 </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-groceries"></i>
-                        <span>groceries</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Grains & Bread</a></li>
-                        <li><a href="#">Dairy & Eggs</a></li>
-                        <li><a href="#">Oil & Fat</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-fruit"></i>
-                        <span>fruits</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Apple</a></li>
-                        <li><a href="#">Orange</a></li>
-                        <li><a href="#">Strawberry</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-dairy-products"></i>
-                        <span>dairy farm</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Egg</a></li>
-                        <li><a href="#">milk</a></li>
-                        <li><a href="#">butter</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-crab"></i>
-                        <span>sea foods</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Lobster</a></li>
-                        <li><a href="#">Octopus</a></li>
-                        <li><a href="#">Shrimp</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-salad"></i>
-                        <span>diet foods</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Salmon</a></li>
-                        <li><a href="#">Potatoes</a></li>
-                        <li><a href="#">Greens</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-dried-fruit"></i>
-                        <span>dry foods</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">noodles</a></li>
-                        <li><a href="#">Powdered milk</a></li>
-                        <li><a href="#">nut & yeast</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-fast-food"></i>
-                        <span>fast foods</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">mango</a></li>
-                        <li><a href="#">plumsor</a></li>
-                        <li><a href="#">raisins</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-cheers"></i>
-                        <span>drinks</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Wine</a></li>
-                        <li><a href="#">Juice</a></li>
-                        <li><a href="#">Water</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-beverage"></i>
-                        <span>coffee</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Cappuchino</a></li>
-                        <li><a href="#">Espresso</a></li>
-                        <li><a href="#">Latte</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-barbecue"></i>
-                        <span>meats</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Meatball</a></li>
-                        <li><a href="#">Sausage</a></li>
-                        <li><a href="#">Poultry</a></li>
-                    </ul>
-                </li>
-                <li class="category-item">
-                    <a class="category-link dropdown-link" href="#">
-                        <i class="flaticon-fish"></i>
-                        <span>fishes</span>
-                    </a>
-                    <ul class="dropdown-list">
-                        <li><a href="#">Agujjim</a></li>
-                        <li><a href="#">saltfish</a></li>
-                        <li><a href="#">pazza</a></li>
-                    </ul>
-                </li>
+                {% endfor %}
+                
             </ul>
             <div class="category-footer">
                 <p>All Rights Reserved by <a href="#">InnovationHub Softwares </a></p>
@@ -435,14 +313,14 @@
         =======================================-->
         <aside class="nav-sidebar">
             <div class="nav-header">
-                <a href="#"><img src="{% static 'en/images/logo.png'%}" alt="logo"></a>
+                <a href="#"><img src="{% static 'en/images/yuva_logo.png'%}" alt="logo"></a>
                 <button class="nav-close"><i class="icofont-close"></i></button>
             </div>
             <div class="nav-content">
                 <div class="nav-btn">
                     <a href="{% url 'login'%}" class="btn btn-inline">
                         <i class="fa fa-unlock-alt"></i>
-                        <span>join here</span>
+                        <span>Login</span>
                     </a>
                 </div>
                 <!-- This commentable code show when user login or register -->
@@ -588,7 +466,7 @@
             </a>
             <a href="#" title="Compare List">
                 <i class="fas fa-random"></i>
-                <span>compare</span>
+                <span>Profile</span>
                 <sup>0</sup>
             </a>
         </div>
@@ -932,10 +810,10 @@
                         <div class="footer-bottom">
                             <p class="footer-copytext">&copy;  All Copyrights Reserved by <a target="_blank" href="https://innovationhubsoftwaresltd.com">InnvationHub softwares</a></p>
                             <div class="footer-card">
-                                <a href="#"><img src="{%static 'en/images/payment/mpesa.png'%}" alt="payment"></a>
-                                <a href="#"><img src="{%static 'en/images/payment/pay-visa.png'%}" alt="payment"></a>
-                                <a href="#"><img src="{%static 'en/images/payment/pay-bank.png'%}" alt="payment"></a>
-                                <a href="#"><img src="{%static 'en/images/payment/pay-mastercard.png'%}" alt="payment"></a>
+                                <a href="#"><img src="{% static 'en/images/payment/mpesa.png'%}" alt="payment"></a>
+                                <a href="#"><img src="{% static 'en/images/payment/pay-visa.png'%}" alt="payment"></a>
+                                <a href="#"><img src="{% static 'en/images/payment/pay-bank.png'%}" alt="payment"></a>
+                                <a href="#"><img src="{% static 'en/images/payment/pay-mastercard.png'%}" alt="payment"></a>
                             </div>
                         </div>
                     </div>
